Bug 363848 - Transform tool does not allow rotating by fractions of a degree
Summary: Transform tool does not allow rotating by fractions of a degree
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Transform (other bugs)
Version First Reported In: 3.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-02 15:35 UTC by Nicolas F.
Modified: 2016-07-02 08:26 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas F. 2016-06-02 15:35:46 UTC
When trying to rotate a large scanned-in page just right, occasionally, one notices that the measure tool will report fractions of a degree of rotation. However, the transform tool will now allow users to actually input fractional values such as 12.3, thus users have to settle for the closest integer, which for large measured reference lines can be noticeably off.

Reproducible: Always

Steps to Reproduce:
1. Go to the transform tool options and choose "Rotate"
2. Try to input some number with a fraction, such as "1.5".
3. Note how it will let you input the decimal point, but no number afterwards.
Comment 1 Michael 2016-06-25 12:57:28 UTC
Transform tool input boxes now expand to 2 decimal places.

https://quickgit.kde.org/?p=krita.git&a=commit&h=cd45a874b8a834823665eede0199fededb860b9e
Comment 2 Halla Rempt 2016-07-02 08:26:29 UTC
Git commit 176cfa2172b2b38b734200b01db1869b60bfd345 by Boudewijn Rempt, on behalf of Michael Abrahams.
Committed on 02/07/2016 at 08:15.
Pushed by rempt into branch 'krita/3.0'.

Set rotation precision for transform tool to 2 decimals

Exact snapping is supported by shift+drag. Now more precise values can
be entered manually.

M  +6    -3    plugins/tools/tool_transform2/kis_tool_transform_config_widget.cpp

http://commits.kde.org/krita/176cfa2172b2b38b734200b01db1869b60bfd345