Set rotation precision for transform tool to 2 decimals

Exact snapping is supported by shift+drag. Now more precise values can
be entered manually.

BUG: 363848